# trevlig-liten-bot

./: Cargo.toml  data.json
src/: main.rs
